<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:iconTint="#4CAF50"
            android:title="@string/menu_prin"/>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ini"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/registro"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/inventory"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/mantenimiento"
            android:icon="@drawable/man"
            android:title="@string/menu_mantenimiento">
        </item>
    </group>
</menu>